--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,19 @@ test:
   dependencies:
   - build
 
-benchmark:
+benchmark-ipv4:
   stage: test
   script:
     - dotnet restore
-    - (cd src/MBW.Utilities.IPAddresses.Benchmarks; dotnet run -c RELEASE -- ParseIPv4s)
+    - (cd src/MBW.Utilities.IPAddresses.Benchmarks; dotnet run -c RELEASE -- --class=ParseIPv4Strategies)
+  dependencies:
+  - build
+
+benchmark-ipv6:
+  stage: test
+  script:
+    - dotnet restore
+    - (cd src/MBW.Utilities.IPAddresses.Benchmarks; dotnet run -c RELEASE -- --class=ParseIPv6Strategies)
   dependencies:
   - build
 
