--- a/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
+++ b/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
@@ -4,7 +4,7 @@
   <Import Project="..\..\imports\Properties.targets" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
