--- a/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
+++ b/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\imports\Common.targets" />
   <Import Project="..\..\imports\SourceLink.targets" />
   <Import Project="..\..\imports\Properties.targets" />
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Memory" Version="4.5.1" />
+    <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
