--- a/imports/SourceLink.targets
+++ b/imports/SourceLink.targets
@@ -19,15 +19,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <SourceLinkGitHubHost Include="scm.mbwarez.dk" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
-
-  <Target Name="UseGithubSourcelinkRoot" AfterTargets="$(SourceControlManagerUrlTranslationTargets)">
-    <ItemGroup>
-      <SourceRoot Update="@(SourceRoot)">
-        <ScmRepositoryUrl>https://github.com/LordMike/MBW.Utilities.IPAddresses.git</ScmRepositoryUrl>
-      </SourceRoot>
-    </ItemGroup>
-  </Target>
 </Project>
