--- a/src/MBW.Utilities.IPAddresses.Benchmarks/MBW.Utilities.IPAddresses.Benchmarks.csproj
+++ b/src/MBW.Utilities.IPAddresses.Benchmarks/MBW.Utilities.IPAddresses.Benchmarks.csproj
@@ -2,13 +2,12 @@
   <Import Project="..\..\imports\Common.targets" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.11.2" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
   </ItemGroup>
 
   <ItemGroup>
