--- a/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
+++ b/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
@@ -4,7 +4,7 @@
   <Import Project="..\..\imports\Properties.targets" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.0;netstandard1.6</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
