--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,3 +30,22 @@ jobs:
       with:
         name: package
         path: Build/
+
+  nuget:
+    runs-on: ubuntu-latest
+    needs: build
+
+    environment:
+      name: nuget
+
+    steps:
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    - name: Download package
+      uses: actions/download-artifact@v2
+      with:
+        name: package
+    - name: Publish
+      run: dotnet push -k ${{ secrets.NUGET_KEY }} --skip-duplicate Build/*.nupkg
