--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,5 +49,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: package
+        path: Build
     - name: Publish
       run: nuget push Build/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate
