--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,14 @@
-name: .NET
+name: Generic Build
 
 on:
   push:
-    branches: [ master, nuget ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
+
+env:
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+  DOTNET_NOLOGO: true
 
 jobs:
   build:
@@ -12,43 +16,40 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 50
+    - run: git fetch --tags
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: "[ -f .ci-skip-tests ] && echo 'Skipping tests' || dotnet test --no-build --verbosity normal"
 
     - name: Pack
-      run: dotnet pack -o Build/
-    - name: Store artifact
-      uses: actions/upload-artifact@v2.2.2
-      with:
-        name: package
-        path: Build/
+      if: github.ref == 'refs/heads/master'
+      run: dotnet pack -c Debug -o Build
 
-  nuget:
-    runs-on: ubuntu-latest
-    needs: build
-
-    environment:
-      name: nuget
+    - name: "Github packages: Nuget push"
+      if: github.ref == 'refs/heads/master'
+      run: dotnet nuget push --no-symbols 1 --skip-duplicate -k ${{ secrets.GITHUB_TOKEN }} -s "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" Build/*.nupkg
       
-    if: github.ref == 'refs/heads/nuget'
-
-    steps:
-    - uses: nuget/setup-nuget@v1
+    - name: "Github packages: Cleanup"
+      if: github.ref == 'refs/heads/master'
+      uses: stripethree/gpr-janitor@dist
       with:
-        nuget-api-key: ${{ secrets.NUGET_KEY }}
-        nuget-version: latest
-    - name: Download package
-      uses: actions/download-artifact@v2
-      with:
-        name: package
-        path: Build
-    - name: Publish
-      run: nuget push Build/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate
+        dry-run: false
+        keep-versions: 25
+        min-age-days: 14
+        versions-to-fetch: 20
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
