--- a/src/MBW.Utilities.IPAddresses.Benchmarks/MBW.Utilities.IPAddresses.Benchmarks.csproj
+++ b/src/MBW.Utilities.IPAddresses.Benchmarks/MBW.Utilities.IPAddresses.Benchmarks.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\imports\Common.targets" />
+
+  <Import Project="..\..\_Imports\Test.targets" />
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
