--- a/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
+++ b/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\imports\Common.targets" />
-  <Import Project="..\..\imports\SourceLink.targets" />
-  <Import Project="..\..\imports\Properties.targets" />
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.0;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard1.6</TargetFrameworks>
+    <Description>Fast IP Address parsing and network subnets functionality.</Description>
   </PropertyGroup>
 
   <ItemGroup>
