--- a/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
+++ b/src/MBW.Utilities.IPAddresses/MBW.Utilities.IPAddresses.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
     <Description>Fast IP Address parsing and network subnets functionality.</Description>
+    <Nullable>annotations</Nullable>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
@@ -10,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0'">
-    <Compile Remove="*.NetStandard2.0.cs" />
-    <None Include="*.NetStandard2.0.cs" />
+    <Compile Remove="**\*.NetStandard2.0.cs" />
+    <None Include="**\*.NetStandard2.0.cs" />
   </ItemGroup>
 
   <ItemGroup>
