--- a/src/MBW.Utilities.IPAddresses.Tests/MBW.Utilities.IPAddresses.Tests.csproj
+++ b/src/MBW.Utilities.IPAddresses.Tests/MBW.Utilities.IPAddresses.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="all" />
+    <PackageReference Include="MBW.Tests.SignaturesTester" Version="0.1.0" />
   </ItemGroup>
 
   <ItemGroup>
